--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-    "name": "gendiff_arbyman",
-    "version": "0.0.1",
-    "description": "hexlet-project-2",
-    "main": "",
-    "bin": {
-    },
-    "scripts": {
-      "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-      "prepublishOnly": "npm run build"
-    },
-    "files": [
-      "dist"
-    ],
-    "author": "arbyman",
-    "keywords": [
-      "gendiff",
-      "hexlet",
-      "study project",
-    ],
-    "license": "ISC",
-    "devDependencies": {
-      "@babel/cli": "^7.2.3",
-      "@babel/core": "^7.2.2",
-      "@babel/node": "^7.2.2",
-      "@babel/preset-env": "^7.3.1",
-      "babel-eslint": "^10.0.1",
-      "eslint": "^5.15.3",
-      "eslint-config-airbnb-base": "^13.1.0",
-      "eslint-plugin-import": "^2.16.0"
-    }
+  "name": "gendiff_arbyman",
+  "version": "0.0.3",
+  "description": "hexlet-project-2",
+  "main": "",
+  "bin": {
+    "gendiff": "dist/bin/index.js"
+  },
+  "scripts": {
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
+  },
+  "files": [
+    "dist"
+  ],
+  "author": "arbyman",
+  "keywords": [
+    "gendiff",
+    "hexlet",
+    "study project"
+  ],
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0"
   }
+}
