--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gendiff_arbyman",
-  "version": "0.0.3",
+  "version": "0.1.6",
   "description": "hexlet-project-2",
   "main": "",
   "bin": {
-    "gendiff": "dist/bin/index.js"
+    "gendiff": "dist/bin/gendiff.js"
   },
   "scripts": {
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
@@ -21,14 +21,16 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "babel-cli": "^6.26.0",
+    "@babel/preset-env": "^7.4.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0"
+  },
+  "dependencies": {
+    "commander": "^2.20.0"
   }
 }
