--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gendiff_arbyman",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "hexlet-project-2",
   "main": "",
   "bin": {
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "commander": "^2.20.0",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.11"
   }
 }
