--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ before_script:
   - ./cc-test-reporter before-build
 script:
   - make lint
-  - make test-coverage
+  - make test
   after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT 
