--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   ],
   "license": "ISC",
   "jest": {
-    "testEnvironment": "node",
-    "collectCoverage": true
+    "testEnvironment": "node"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
